# hermes-adaptive-router

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  Makefile  README.md  ROADMAP.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  CONTRIBUTING.md  QUICK_START.md
scripts/: daily_routing_report.py
src/hermes_adaptive_router/: __init__.py  ab_testing.py  cache.py  integrations.py  intent_signals.py  language_detection.py  multi_provider.py  observability.py  providers.py  router.py
tests/: test_benchmark.py  test_edge_cases.py  test_integrations.py  test_multi_provider.py  test_observability.py  test_p1_features.py  test_router.py
